--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/fbms?useSSL=false&characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/fbms?characterEncoding=utf8
     username: root
     password: root
   profiles:
