--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
-!**/src/test/**
+**/src/test/**
+application-dev-local.yml
 
 ### STS ###
 .apt_generated
